<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/iv_trailer_img"
        android:layout_width="0dp"
        android:layout_height="@dimen/detail_act_main_image_dimen"
        android:contentDescription="@string/detail_trailer_content"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/shadow_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha=".4"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@id/iv_trailer_img"
        app:layout_constraintLeft_toLeftOf="@id/iv_trailer_img"
        app:layout_constraintRight_toRightOf="@id/iv_trailer_img"
        app:layout_constraintTop_toTopOf="@id/iv_trailer_img" />

    <ImageView
        android:id="@+id/iv_youtube_play"
        android:layout_width="@dimen/youtube_image_dimen"
        android:layout_height="@dimen/youtube_image_dimen"
        android:contentDescription="@string/detail_youtube_content"
        android:src="@drawable/youtube_image"
        app:layout_constraintBottom_toTopOf="@id/iv_trailer_img"
        app:layout_constraintLeft_toRightOf="@id/iv_trailer_img"
        app:layout_constraintRight_toLeftOf="@id/iv_trailer_img"
        app:layout_constraintTop_toBottomOf="@id/iv_trailer_img" />

    <TextView
        android:id="@+id/tv_no_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_video_detail"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/iv_trailer_img"
        app:layout_constraintLeft_toLeftOf="@id/iv_trailer_img"
        app:layout_constraintRight_toRightOf="@id/iv_trailer_img"
        app:layout_constraintTop_toBottomOf="@id/iv_trailer_img" />



</android.support.constraint.ConstraintLayout>